# ml_algorithms

./: .travis.yml  README.md  dev-requirements.txt  setup.cfg  setup.py  touflo.gvdesign  tox.ini
docs/_source/: nn_clsf.rst
docs/source/: conf.py
ml_algorithms/: lin_rg.py
tests/: test_clsf_vect.py  test_kmeans.py  test_lgx_rg.py  test_lin_rg.py  test_nn.py  test_packaging.py  test_utils.py
tests/nnet/: test_sgl_parm.py
tests/rec_sys/: test_cf.py
tests/supv/: test_lin_rg.py  test_nn_clsf.py
tests/supv/lgx_rg/: test_cmpt_grf.py  test_sgl_parm.py
tests/unsupv/: test_kmeans.py
touvlo/: __init__.py  nn_clsf.py  nn_clsf_vect.py  utils.py  utils_bkup.py
touvlo/rec_sys/: cf.py
touvlo/supv/: lgx_rg.py  lin_rg.py  nn_clsf.py
touvlo/supv/lgx_rg/: __init__.py  cmpt_grf.py  sgl_parm.py
touvlo/unsupv/: anmly_detc.py
