[metadata]
name = touvlo 
summary = ML algorithms implemented from scratch provided block by block
description-file = README.md
author = Benardi Nunes
author-email = benardinunes@gmail.com
license = GPLv3
home-page = https://github.com/Benardi/touvlo 
requires-python = >=3.5
classifier =
    Development Status :: 1 - Alpha
    Intended Audience :: Information Technology
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Development Status :: 1 - Alpha',
    Programming Language :: Python',
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Software Development :: Libraries :: Python Modules

[files]
packages = touvlo
    
[build_sphinx]
source-dir = docs/source
build-dir = docs/_build
all_files = 1

[upload_sphinx]
upload-dir = docs/_build/html

[pbr]
warnerrors = True

[wheel]
universal = 0 
